# kasirga-compiler

./: CMakeLists.txt  README.md
tools/: alp.h
tools/alp/: alp.cpp
tools/kasirgacomp/: driver.cpp
